--- a/template/account-page.html
+++ b/template/account-page.html
@@ -84,4 +84,4 @@
 <div style="height: 500px;"></div>
 
 <script src="core/scripts/accountPage.js"></script>
-<script src="core/scripts/favApi.js"></script>
+<script>%!SCRIPTS!%</script>
