--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -112,11 +112,6 @@
 
 
 
-
-
-
-
-
 <script src="core/scripts/write-review-stars.js"></script>
 
 <script>
@@ -136,29 +131,5 @@
         }
     }
 
-    function saveToFavorites(itemId) {
-        fetch('api/save_favorite.php', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ item_id: itemId })
-        })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    //console.log(data.result);
-                    //console.log(data.ids);
-                    if (data.result === "inserted") {
-                        document.getElementById("icon-" + itemId).setAttribute("src", "content/heart_icons/heart2b.png");
-                    }
-                    else if (data.result === "removed") {
-                        document.getElementById("icon-" + itemId).setAttribute("src", "content/heart_icons/heart1b.png");
-                    }
-                } else {
-                    console.log('Hiba a kedvenchez adás közben: ' + data.error);
-                }
-            })
-            .catch(error => console.error('Error:', error));
-    }
+    %!SCRIPTS!%
 </script>
