--- a/template/receptek.html
+++ b/template/receptek.html
@@ -128,4 +128,4 @@
 </div>
 
 <script src="core/scripts/szurok.js"></script>
-<script src="core/scripts/favApi.js"></script>
+<script>%!SCRIPTS!%</script>
