--- a/core/css/style.css
+++ b/core/css/style.css
@@ -80,6 +80,16 @@ a {
     opacity: 80%;
 }
 
+.btn-outline-primary{
+    background-color: transparent;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+}
+
+.btn-outline-primary:hover{
+    border: 1px solid transparent;
+}
+
 .blokk {
     background-color: white;
 }
@@ -449,12 +459,21 @@ footer {
     margin: 10px auto;
 }
 
-.review-thumb .user-pic {
+.review-img-wrapper{
+    margin: auto;
     width: 80px;
-    text-align: center;
-    margin-left: auto;
-    margin-bottom: 15px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
     border-radius: 50%;
+}
+
+.review-img-wrapper img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
 }
 
 .review-star {
@@ -497,8 +516,9 @@ footer {
     width: 20px;
     height: 20px;
     background-image: url('../../content/stars/star-empty.png');
-    background-size: cover;
-    margin: 5px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin: 4px;
     transition: all ease .2;
 }
 
@@ -529,6 +549,7 @@ footer {
 .com-del-block {
     display: block;
     float: right;
+    margin-bottom: -15px;
 }
 
 .com-del-btn {
@@ -539,7 +560,6 @@ footer {
     height: 23px;
     border: none;
     outline: none;
-    background-color: none !important;
 }
 
 .com-del-block form input:hover {
@@ -600,7 +620,9 @@ footer {
 
 .img-wrapper img {
 
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    image-orientation: cover;
 }
 
 /*              Profil page         */
@@ -621,15 +643,14 @@ footer {
 }
 
 .profil-img-wrapper {
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 180px;
+    max-height: 180px;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     border-radius: 50% !important;
 }
-
 
 .profil-pic {
     width: 100%;
