--- a/core/css/style.css
+++ b/core/css/style.css
@@ -26,6 +26,28 @@ body {
     font-family: "Montserrat", serif;
 }
 
+.cookie-popup {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    max-width: 600px;
+    background-color: #ffffff;
+    color:black;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    display: none;
+}
+
+.cookie-popup #accept-btn{
+    width: 150px;
+    margin:auto;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
 a {
     color: var(--primary-color);
 }
