--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -10,7 +10,7 @@
             %!HEART!%
             %!BUTTONS!%
             <h2 class="text-center mt-5 mb-4">%!NEV!%</h2>
-            <h6 class="text-center %!COLOR!%">%!USER!%</h6>
+            <div id="recepie-founder"><div class="founder-wrapper"><img src="%!USERPIC!%" alt="%!USER!%"></div><h6 class="text-center %!COLOR!% mt-2">%!USER!%</h6></div>
             <p class="text-center mb-0"><small>%!TIME!%</small></p>
             <div class="parameters my-4">
                 <ul>
@@ -26,9 +26,10 @@
                 </ul>
             </div>
             <div class="reviews small mb-3">
-                <span><img src="%!STARSPIC!%" alt="stars"> &#x2022 </span>
+                <span><img src="%!STARSPIC!%" alt="stars" id="stars-img"> &#x2022 </span>
                 <span>%!ERTEKELESSZAM!% értékelés &#x2022 </span>
-                <span>%!KOMMENTSZAM!%<a class="primary-color" href="#comments"> hozzászólás</a></span>
+                <span>%!KOMMENTSZAM!%<a class="primary-color" href="#comments"> hozzászólás</a> &#x2022</span>
+                <span><img src="%!HEARTIMG!%" alt="heart" id="heart-icon"> %!FAVNUM!% </span>
             </div>
 
 
