--- a/core/css/style.css
+++ b/core/css/style.css
@@ -37,6 +37,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     display: none;
+    z-index: 1000;
 }
 
 .cookie-popup #accept-btn {
