--- a/template/navItemLogin.html
+++ b/template/navItemLogin.html
@@ -7,6 +7,7 @@
             </div>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+            <li><a class="dropdown-item" href="index.php?p=account">Profilom</a></li>
             <li><a class="dropdown-item" href="index.php?p=account">Receptjeim</a></li>
             <li><a class="dropdown-item" href="index.php?p=favorites">Kedvencek</a></li>
             %!ADMIN!%
