--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
                 <div class="text-center card-bottom-text">
-                    <p class="card-text mb-1 %!COLOR!%"><small><span>%!USER!%</span></small></p>
+                    <p class="card-text mb-1"><small><span><a class="link-default %!COLOR!%" href="index.php?p=user-page&user=%!USERID!%">%!USER!%</a></span></small></p>
                     <p class="card-text mb-0 text-muted"><small>Értékelés <span>%!SCORE!%</span></small>
                     </p>
                     <div class="star mb-1">
