--- a/core/css/style.css
+++ b/core/css/style.css
@@ -53,6 +53,15 @@ a {
     color: var(--primary-color);
 }
 
+.link-default{
+    text-decoration: none;
+    transition: all ease .2s;
+}
+
+.link-default:hover{
+    opacity: .8;
+}
+
 .bold {
     font-weight: bold;
 }
@@ -66,6 +75,9 @@ a {
     color: rgb(28, 194, 128);
 }
 
+.max-height{
+    max-height: 800px;
+}
 
 .bg-image {
     position: absolute;
