--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -10,7 +10,7 @@
             %!HEART!%
             %!BUTTONS!%
             <h2 class="text-center mt-5 mb-4">%!NEV!%</h2>
-            <div id="recepie-founder"><div class="founder-wrapper"><img src="%!USERPIC!%" alt="%!USER!%"></div><h6 class="text-center %!COLOR!% mt-2">%!USER!%</h6></div>
+            <div id="recepie-founder"><div class="founder-wrapper"><img src="%!USERPIC!%" alt="%!USER!%"></div><h6 class="text-center %!COLOR!% mt-2"><a class="link-default" href="index.php?p=user-page&user=%!USERID!%">%!USER!%</a></h6></div>
             <p class="text-center mb-0"><small>%!TIME!%</small></p>
             <div class="parameters my-4">
                 <ul>
