--- a/template/about.html
+++ b/template/about.html
@@ -11,8 +11,9 @@
         <p class="my-3" id="about-text">%!ABOUT!%</p>
     </div>
 
-    <div class="row my-5">
+   
         <h2 class="primary-color my-5 text-center">Számaink:</h2>
+        <div class="row my-5" style="max-width: 800px; margin: auto;">
         <div class="col-sm-6 text-center">
             <div class="num-card" id="user-num">
                 <h2 class="primary-color big-number">%!USER!%</h2>
