--- a/template/account-page.html
+++ b/template/account-page.html
@@ -17,8 +17,8 @@
 <div id="main-content">
     <h6 class="text-center" style="background-color:%!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
     <div class="wrapper">
-        <div class="row">
-            <div class="col-md-3 p-5 white rounded mt-3 max-height">
+        <div class="row" style="width: 100%; margin: 0">
+            <div class="col-md-3 p-5 white rounded mt-1 mb-0 max-height max-width profil-box">
                 <div class="profil-adatok">
                     <h3>Profilom</h3>
                     <div class="text-center mt-4">
@@ -40,14 +40,14 @@
 
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9" style="padding-right: 0 !important;">
                 <div class="profil-receptek white" style="min-height: 800px;">
                     <div class="cover-pic">
                         <h2>Receptjeim</h2>
                         <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
                     </div>
 
-                    <div class="row py-3 px-5">
+                    <div class="row py-3 mw-850 dynamic-padding" style="width: 100%; margin: 0;">
 
                         <div class="container text-center pb-3">
                             <form method="post">
