--- a/template/favorites.html
+++ b/template/favorites.html
@@ -1,15 +1,15 @@
 <div id="main-content">
-    <div style="max-width: 1000px; margin: auto">
-        <div class="row">
+    <div style="max-width: 1200px; margin: auto">
+        <div class="row" style="width: 100%; margin: 0">
 
-            <div class="col-12">
+
                 <div class="profil-receptek white" style="min-height: 800px;">
-                    <div class="cover-pic">
+                    <div class="cover-pic mb-3">
                         <h2>Kedvenc receptjeim</h2>
                         <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
                     </div>
 
-                    <div class="row py-3 px-5">
+                    <div class="row py-3 px-5 dynamic-padding" style="width: 100%; margin: 0">
 
 
                         %!RECEPTEK!%
@@ -17,7 +17,7 @@
 
                     </div>
                 </div>
-            </div>
+          
         </div>
     </div>
 </div>
