--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -1,4 +1,4 @@
-<div class=" col-lg-4 col-sm-6 mb-5"  id="card-%!RECEPTID!%">
+<div class="col-lg-4 col-6 mb-5"  id="card-%!RECEPTID!%">
     <div class="card-deck shadow rounded d-block" id="%!RECEPTID!%">
         %!HEART!%
         <div class="card"">
