--- a/template/receptek.html
+++ b/template/receptek.html
@@ -1,7 +1,7 @@
 %!MAINSEARCH!%
 
 <div class="wrapper">
-    <div class="row">
+    <div class="row mx-0">
         
         <div class="col-lg-3 col-md-4 col-sm-12 my-3 white mx-auto shadow" id="filter-box-collapsed">
             <div>
@@ -69,8 +69,8 @@
             </div>
         </div>
 
-        <div class="col-lg-9 col-md-8 col-sm-12 mr-2 white px-5 py-3">
-            <p class="text-center mb-3">Találatok száma: <b style="color: var(--primary-color)">%!RESULTNUM!%</b></p>
+        <div class="col-lg-9 col-md-8 col-sm-12 white px-5 dynamic-padding">
+            <p class="text-center my-3">Találatok száma: <b style="color: var(--primary-color)">%!RESULTNUM!%</b></p>
             <!--
             <div class="order-list">
                 
@@ -95,7 +95,7 @@
                 </form>
             </div>
 
-            <div class="row">
+            <div class="row mw-850">
 
 
 
