--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -1,4 +1,4 @@
-<div class=" col-lg-4 col-sm-6 mb-5 user-card-deck">
+<div class=" col-lg-4 col-6 mb-5 user-card-deck">
     <div class="card-deck shadow rounded" id="%!RECEPTID!%">
         %!HEART!%
         <div class="card">
