--- a/template/favorites.html
+++ b/template/favorites.html
@@ -9,7 +9,7 @@
                         <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
                     </div>
 
-                    <div class="row py-3 px-5 dynamic-padding" style="width: 100%; margin: 0">
+                    <div class="row py-3 px-5 dynamic-padding mw-850" style="width: 100%; margin: auto">
 
 
                         %!RECEPTEK!%
