--- a/template/account-page.html
+++ b/template/account-page.html
@@ -18,7 +18,7 @@
     <h6 class="text-center" style="background-color:%!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
     <div class="wrapper">
         <div class="row" style="width: 100%; margin: 0">
-            <div class="col-md-3 p-5 white rounded mt-1 mb-0 max-height max-width profil-box">
+            <div class="col-md-3 p-5 white rounded mt-1 mb-0 max-height profil-box m-auto">
                 <div class="profil-adatok">
                     <h3>Profilom</h3>
                     <div class="text-center mt-4">
@@ -47,7 +47,7 @@
                         <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
                     </div>
 
-                    <div class="row py-3 mw-850 dynamic-padding" style="width: 100%; margin: 0;">
+                    <div class="row py-3 mw-850 dynamic-padding" style="width: 100%; margin: auto;">
 
                         <div class="container text-center pb-3">
                             <form method="post">
