--- a/template/user-page.html
+++ b/template/user-page.html
@@ -2,8 +2,8 @@
 
 <div id="main-content">
     <div class="wrapper">
-        <div class="row"  style="width: 100%; margin: 0">
-            <div class="col-md-3 p-5 white rounded mt-3 max-height max-width profil-box">
+        <div class="row"  style="width: 100%; margin: auto">
+            <div class="col-md-3 p-5 white rounded mt-3 max-height profil-box m-auto">
                 <div class="profil-adatok">
                     <div class="text-center mt-4">
                         <div class="d-block" style="max-width: 200px; margin: auto;">
@@ -24,7 +24,7 @@
                         <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
                     </div>
 
-                    <div class="row py-3 mw-850 dynamic-padding" style="width: 100%; margin: 0;">
+                    <div class="row py-3 mw-850 dynamic-padding" style="width: 100%; margin: auto;">
 
                         <div class="container text-center pb-3">
                             <form method="post">
