--- a/template/about.html
+++ b/template/about.html
@@ -4,16 +4,16 @@
 
 <div class="container white p-5 mb-5">
 
-    <h6 class="text-center" style="background-color: %!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
+    <h6 class="text-center result" style="background-color: %!COLOR!%;">%!RESULT!%</h6>
 
-    <div class="m-auto">
+    <div class=" m-auto">
         <h2 class="primary-color mb-3">Amit rólunk érdemes tudni</h2>
         <p class="my-3" id="about-text">%!ABOUT!%</p>
     </div>
 
-   
-        <h2 class="primary-color my-5 text-center">Számaink:</h2>
-        <div class="row my-5" style="max-width: 800px; margin: auto;">
+
+    <h2 class="primary-color my-5 text-center">Számaink:</h2>
+    <div class="row my-5 m-auto mw-800">
         <div class="col-sm-6 text-center">
             <div class="num-card" id="user-num">
                 <h2 class="primary-color big-number">%!USER!%</h2>
@@ -22,7 +22,7 @@
         </div>
         <div class="col-sm-6 text-center">
             <div class="num-card"">
-                <h2 class="primary-color big-number">%!RECEPT!%</h2>
+                <h2 class=" primary-color big-number">%!RECEPT!%</h2>
                 <h3>recept</h3>
             </div>
         </div>
@@ -30,14 +30,15 @@
 
     <div class="devider"></div>
 
-    <div class="container" style="max-width: 600px;">
+    <div class="container mw-600">
         <h1 class="primary-color mt-5 text-center">Kérdésed van?</h1>
         <h3 class="mt-1 text-center">írj nekünk!</h3>
-    
+
         <form method="post" class="mt-5">
             <div class="form-group my-3">
                 <label for="email">Email címed</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="pelda@mail.hu" value="%!EMAIL!%" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="pelda@mail.hu"
+                    value="%!EMAIL!%" required>
             </div>
             <div class="form-group my-3">
                 <label for="subj">Téma</label>
@@ -45,7 +46,8 @@
             </div>
             <div class="form-group my-3">
                 <label for="message">Üzenet</label>
-                <textarea class="form-control" id="message" name="message" placeholder="Szöveges üzenet..." cols="80" rows="10" required></textarea>
+                <textarea class="form-control" id="message" name="message" placeholder="Szöveges üzenet..." cols="80"
+                    rows="10" required></textarea>
             </div>
             <input type="submit" class="btn btn-default w-100 my-3" value="Küldés" name="ok">
         </form>
