--- a/template/login.html
+++ b/template/login.html
@@ -1,6 +1,6 @@
 <h6 class="text-center" style="background-color: %!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
 <div class="container d-flex justify-content-center align-items-center vh-100" id="login-box">
-    <div class="card p-4 shadow-lg my-5" id="login-box" style="width: 100%; max-width: 400px;">
+    <div class="card p-4 shadow-lg my-5 w-100 mw-400" id="login-box">
         <h3 class="text-center mb-4">Bejelentkezés</h3>
         <form method="post">
             <div class="mb-3">
