--- a/template/mainSearch.html
+++ b/template/mainSearch.html
@@ -1,7 +1,7 @@
 <div class="py-5" id="main-search" style="background-image: url(%!IMG!%);">
     <form method="post" class="pt-5" id="text-search-form">
-        <h2 id="welcome-text" class="text-center">%!WELCOME!%</h2>
-        <div class="container" style="max-width: 800px;">
+        <h2 id="welcome-text headline" class="text-center">%!WELCOME!%</h2>
+        <div class="container mw-800">
             <div class="row">
                 <div class="col-sm-10 d-block">
                     <span id="remove-search" onclick="removeSearchBar()">X</span>
