--- a/template/recept-feltoltes.html
+++ b/template/recept-feltoltes.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="container mt-3">
-            <div class="row p-4" style="background-color: rgb(234, 245, 250); border-radius: 10px;">
+            <div class="row p-4 upload-box">
 
                 <div class="form-group text-center col-sm-3">
                     <label for="category" class="form-label">Kategória</label><br>
