--- a/template/receptek.html
+++ b/template/receptek.html
@@ -5,7 +5,7 @@
         
         <div class="col-lg-3 col-md-4 col-sm-12 my-3 white mx-auto shadow" id="filter-box-collapsed">
             <div>
-                <p class="text-center my-3" id="filter-button">szűrők<span style="float: right;"> &#8681;</span></p>
+                <p class="text-center my-3" id="filter-button">szűrők<span> &#8681;</span></p>
             </div>
         </div>
 
@@ -70,7 +70,7 @@
         </div>
 
         <div class="col-lg-9 col-md-8 col-sm-12 white px-5 dynamic-padding">
-            <p class="text-center my-3">Találatok száma: <b style="color: var(--primary-color)">%!RESULTNUM!%</b></p>
+            <p class="text-center my-3">Találatok száma: <b class="primary-color">%!RESULTNUM!%</b></p>
             <!--
             <div class="order-list">
                 
@@ -95,7 +95,7 @@
                 </form>
             </div>
 
-            <div class="row mw-850">
+            <div class="row mw-950">
 
 
 
