--- a/template/update-recepie.html
+++ b/template/update-recepie.html
@@ -1,4 +1,4 @@
-<h6 class="text-center" style="background-color: %!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
+<h6 class="text-center result" style="background-color: %!COLOR!%;">%!RESULT!%</h6>
 
 <div class="container upload-form my-4">
     <h2 class="text-center my-4">%!NEV!% módosítása</h2>
@@ -18,7 +18,7 @@
         </div>
 
         <div class="container mt-3">
-            <div class="row p-4" style="background-color: rgb(234, 245, 250); border-radius: 10px;">
+            <div class="row p-4 upload-box">
 
                 <div class="form-group text-center col-sm-3">
                     <label for="category" class="form-label">Kategória</label><br>
