--- a/template/user-row.html
+++ b/template/user-row.html
@@ -5,10 +5,10 @@
     <td>%!GROUP!%</td>
     <td>%!DATE!%</td>
     <td>%!PIC!%</td>
-    <td style="width: 100px;">
+    <td class="w-100">
         <input type="button" class="btn btn-primary edit-btn" value="módosít" name="edit">
     </td>
-    <td style="width: 100px;">
+    <td class="w-100">
         <form method="post">
         <input type="submit" class="btn btn-danger submit-btn" value="törlés" name="delete">
         <input type="hidden" name="user" value="%!ID!%">
