--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="ingredients mx-5">
-                <h3 class="my-5" style="margin-left: 20px">Hozzávalók</h3>
+                <h3 class="my-5 ml-20">Hozzávalók</h3>
                 <ul>
 
 
