--- a/template/register.html
+++ b/template/register.html
@@ -1,6 +1,6 @@
-<h6 class="text-center" style="background-color: %!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
+<h6 class="text-center result" style="background-color: %!COLOR!%;">%!RESULT!%</h6>
 <div class="container d-flex justify-content-center align-items-center vh-100" id="register-box">
-    <div class="card p-4 shadow-lg" style="width: 100%; max-width: 500px;">
+    <div class="card p-4 shadow-lg w-100 mw-500">
         <h3 class="text-center mb-5">Regisztráció</h3>
         <form method="post" enctype="multipart/form-data">
             <div class="row">
