--- a/template/user-page.html
+++ b/template/user-page.html
@@ -2,11 +2,11 @@
 
 <div id="main-content">
     <div class="wrapper">
-        <div class="row"  style="width: 100%; margin: auto">
+        <div class="row w-100 m-auto">
             <div class="col-md-3 p-5 white rounded mt-3 max-height profil-box m-auto">
                 <div class="profil-adatok">
                     <div class="text-center mt-4">
-                        <div class="d-block" style="max-width: 200px; margin: auto;">
+                        <div class="d-block m-auto mw-200">
                             <img id="profil-pic-icon" src="content/camera-icon.png" alt="camera icon">
                             <div class="profil-img-wrapper m-auto" id="profil-img-wrapper"><img class="profil-pic" src="%!SRC!%" alt="%!NAME!% profilkép"></div>
                         </div>
@@ -17,14 +17,14 @@
 
                 </div>
             </div>
-            <div class="col-md-9" style="padding-right: 0 !important;">
-                <div class="profil-receptek white" style="min-height: 800px;">
+            <div class="col-md-9 pr-0">
+                <div class="profil-receptek white">
                     <div class="cover-pic">
-                        <h2>%!NAME!% receptjei</h2>
+                        <h2 class="headline">%!NAME!% receptjei</h2>
                         <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
                     </div>
 
-                    <div class="row py-3 mw-850 dynamic-padding" style="width: 100%; margin: auto;">
+                    <div class="row py-3 mw-950 dynamic-padding w-100 m-auto pb-5">
 
                         <div class="container text-center pb-3">
                             <form method="post">
@@ -58,7 +58,6 @@
     </div>
 </div>
 
-<div style="height: 500px;"></div>
 
 <script>
 window.onresize =
