--- a/template/account-page.html
+++ b/template/account-page.html
@@ -40,7 +40,7 @@
 
                 </div>
             </div>
-            <div class="col-md-9 pr-0">
+            <div class="col-md-9 profil-wrapper">
                 <div class="profil-receptek white">
                     <div class="cover-pic">
                         <h2 class="headline">Receptjeim</h2>
