--- a/core/css/style.css
+++ b/core/css/style.css
@@ -26,7 +26,7 @@ body {
     font-family: "Montserrat", serif;
 }
 
-.placeholder{
+.placeholder {
     height: 500px;
 }
 
@@ -57,11 +57,15 @@ a {
     color: var(--primary-color);
 }
 
-.pr-0{
+.black {
+    color: black;
+}
+
+.pr-0 {
     padding-right: 0px;
 }
 
-.headline{
+.headline {
     font-size: 38px;
     font-weight: bold;
 }
@@ -92,31 +96,31 @@ a {
     max-height: 600px;
 }
 
-.max-width{
+.max-width {
     max-width: 600px;
 }
 
-.mh-800{
+.mh-800 {
     min-height: 800px;
 }
 
-.ml-20{
+.ml-20 {
     margin-left: 20px;
 }
 
-.maxw-100{
+.maxw-100 {
     max-width: 100px;
 }
 
-.mw-200{
+.mw-200 {
     max-width: 200px;
 }
 
-.mw-400{
+.mw-400 {
     max-width: 400px;
 }
 
-.mw-500{
+.mw-500 {
     max-width: 500px;
 }
 
@@ -124,7 +128,7 @@ a {
     max-width: 600px;
 }
 
-.mw-800{
+.mw-800 {
     max-width: 800px;
 }
 
@@ -138,11 +142,11 @@ a {
     margin: auto;
 }
 
-.mr-3{
+.mr-3 {
     margin-right: 3rem !important;
 }
 
-.result{
+.result {
     padding: 5px;
     color: white
 }
@@ -166,27 +170,45 @@ a {
     }
 }
 
-.profil-box small{
+.profil-box small {
     display: block;
     word-wrap: break-word;
 }
 
-.upload-box{
+.upload-box {
     background-color: rgb(234, 245, 250);
     border-radius: 10px;
 }
 
-.profil-pic-wrapper{
+.profil-pic-wrapper {
     max-width: 200px;
     margin: auto;
 }
 
-.profil-receptek{
+.profil-pic-wrapper-small {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin: auto;
+    border: 5px solid white;
+}
+
+.profil-pic-wrapper-small img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
+.profil-receptek {
     padding: 0px;
     min-height: 1800px;
 }
 
-.profil-wrapper{
+.profil-wrapper {
     padding-right: 0;
 }
 
@@ -196,7 +218,7 @@ a {
     }
 }
 
-.fav-wrapper{
+.fav-wrapper {
     max-width: 1000px;
     margin: auto;
 }
@@ -925,6 +947,10 @@ footer {
     max-width: 1200px;
 }
 
+.mxw-90p {
+    margin: auto;
+    max-width: 90%;
+}
 
 
 .star-parameters ul li {
@@ -1229,8 +1255,15 @@ footer {
     }
 }
 
-.user-card-deck {
-   
+
+.user-card {
+    transition: all ease .2s;
+}
+
+.user-card:hover {
+    position: relative;
+    z-index: 3;
+    transform: scale(1.04);
 }
 
 .recepie-img-wrapper {
