--- a/template/navigation.html
+++ b/template/navigation.html
@@ -36,6 +36,9 @@
                         <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Vegán">Vegán</a></li>
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.php?p=users-page">Felhasználók</a>
+                </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="index.php?p=about">Rólunk</a>
