--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -37,17 +37,33 @@
                 <img class="img-fluid" src="%!RECEPTKEP!%" alt="recept képe">
             </div>
 
-            <div class="ingredients mx-5">
-                <h3 class="my-5 ml-20">Hozzávalók</h3>
-                <ul>
+            <div class="ingredients mx-5 d-block">
+
+                <div class="row">
+                    
+    
+                    <div class="col-md-9 .order-md-2">
+                        <h3 class="my-5 ml-20">Hozzávalók</h3>
+                        <ul>
+        
+        
+        
+                            %!HOZZAVALOK!%
+        
+        
+        
+                        </ul>
+                    </div>
 
 
-
-                    %!HOZZAVALOK!%
-
-
-
-                </ul>
+                    <div class="col-md-3 mt-4 mr-2 order-md-1" id="set-portion-box">
+                        <form method="post" id="set-portion-form">
+                                <label for="portion" >Adag:</label>
+                                <input type="number" name="portion" id="portion" class="form-control" step="1" value="%!PORTION!%" min="1" max="99">
+                                <input type="submit" class="btn btn-default w-100 mt-1" name="setPortion" value="számol">
+                        </form>
+                    </div>
+                </div>
             </div>
 
             <div class="devider"></div>
